codama-macros/tests/node_attribute/number_type_node_endian_already_set.fail.rs
use codama_macros::node;

#[node(numberTypeNode(be, le, u32))]
pub struct Foo(usize);

fn main() {}
